# tminasen.dev

./: .gitignore  Cargo.toml  README.md  gatsby-browser.js  gatsby-config.js  gatsby-node.js  mdx-components.tsx  next.config.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: parse-visual-regression-results.js
.github/workflows/: visual-regression-cleanup.yml  visual-regression.yml
docs/: architecture.md
pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
pages/blog/: [id].tsx
pages/tags/: [tag].tsx  index.tsx
pr-101/: index.html
pr-102/: index.html
pr-103/: index.html
pr-96/: index.html
pr-97/: index.html
pr-98/: index.html
pr-99/: index.html
public/rss/: feed.xml
scripts/: Cargo.toml  create-cli.js  tsconfig.json  tsconfig.scripts.json
scripts/article-scripts/: Cargo.toml  article-creator.mts
scripts/article-scripts/src/: lib.rs  main.rs
scripts/article-scripts/src/features/: article_creator.rs  cli_config.rs  file_operations.rs  mod.rs
scripts/functions/: article.mjs  article.mts  article.ts  date.mjs  date.mts  date.ts  file-operations.mts
scripts/generate-ogp/: GenerateOgp.ts  generate-ogp.mjs  generate-ogp.mts  ogp-base.html
scripts/generate-rss/: GenerateRss.ts  generate-rss.mjs  generate-rss.mts
scripts/src/: main.rs
src/: index.css
src/components/: ArticleLayout.tsx  CardComponent.tsx  CodeBlockComponent.tsx  FooterComponent.tsx  (+11 more)
types/: article.d.ts  graphql-types.d.ts  utility.d.ts
(+88 files in other folders)
