[package]
name = "article-scripts"
version = "0.1.0"
authors = ["tminasen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.86"
chrono = "^0.4.19"
clap = "^4.5.16"
rand = "^0.8.3"
uuid = { version = "^1.10.0", features = ["v4"] }
